# corvus

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ai-agent orchestration architecture.html
.github/workflows/: ci.yml
cmake/: corvusConfig.cmake.in
docs/: phase-0-explained.md  pr1-http-transport-explained.md
docs/plans/: 2026-07-15-cloud-clients-plan.md
docs/specs/: 2026-06-29-jarvis-cpp-design.md  2026-07-04-memory-design.md  2026-07-06-phase0-hardening-design.md  2026-07-15-cloud-clients-design.md
examples/: CMakeLists.txt  mock_quickstart.cpp
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
include/corvus/: agent.h  agent_builder.h  corvus.h  http_transport.h  llm_client.h  memory.h  mock_http_transport.h  mock_llm.h  schema.h  strategy.h  tool.h  tool_registry.h  types.h
src/: agent.cpp  agent_builder.cpp  clients_stub.cpp  httplib_transport.cpp  memory.cpp  mock_llm.cpp  schema.cpp  tool_registry.cpp
tests/: CMakeLists.txt  test_agent.cpp  test_registry.cpp  test_schema.cpp  test_transport_contract.cpp
